; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_md5-internal.c_MD5Init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_md5-internal.c_MD5Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MD5Context = type { i32*, i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MD5Init(%struct.MD5Context* %0) #0 {
  %2 = alloca %struct.MD5Context*, align 8
  store %struct.MD5Context* %0, %struct.MD5Context** %2, align 8
  %3 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %4 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  store i32 1732584193, i32* %6, align 4
  %7 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %8 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  store i32 -271733879, i32* %10, align 4
  %11 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %12 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 2
  store i32 -1732584194, i32* %14, align 4
  %15 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %16 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 3
  store i32 271733878, i32* %18, align 4
  %19 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %20 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %19, i32 0, i32 1
  %21 = load i64*, i64** %20, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 0
  store i64 0, i64* %22, align 8
  %23 = load %struct.MD5Context*, %struct.MD5Context** %2, align 8
  %24 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %23, i32 0, i32 1
  %25 = load i64*, i64** %24, align 8
  %26 = getelementptr inbounds i64, i64* %25, i64 1
  store i64 0, i64* %26, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
